# WR

./: CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
src/: app.py  home.html
src/static/: app.js  style.css
src/static/css/: explore.css  home.css
src/static/js/: cookie.js
src/templates/: cities.html  explore.html  home.html
